<resources>
    <string name="app_name">On Warranty</string>
    <string name="title_activity_main">Warranties</string>
    <string name="title_home">Home</string>
    <string name="title_add_new">Add new</string>
    <string name="title_settings">Settings</string>
    <string name="common_signout_button_text">Sign Out</string>
    <string name="warranty_field">Warranty started at</string>
    <string name="add_new_warranty_btn">Add new warranty</string>
    <string name="warranty_lasts_for">Warranty lasts for</string>
    <string name="warrantyLastsForHint">years</string>
    <string name="warrantyProductName">Product</string>
    <string name="warranty_info_product_label">Product:</string>
    <string name="warranty_info_time_left_label">Until</string>
    <string name="warranty_gone">Gone</string>
</resources>
