<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ru.zeburek.onwarranty.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_add_new"
        android:name="ru.zeburek.onwarranty.ui.addnew.AddNewFragment"
        android:label="@string/title_add_new"
        tools:layout="@layout/fragment_add_new" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="ru.zeburek.onwarranty.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>